--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@ main {
   align-content: center;
   /* box-sizing: border-box; */
   /* display: grid; */
-  font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   -webkit-hyphens: auto;
   hyphens: auto;
   /* line-height: 1.65; */
@@ -53,6 +52,8 @@ code:after {
 .coming-soon,h1 {
   color: #151515;
   text-align: center;
+  font-family: 'fira sans';
+  
   /* top: 50%; */
   font-size: 45px;
 }
@@ -63,3 +64,58 @@ img {
   /* align-self: inherit; */
   /* position: absolute; */
   margin: auto;}
+
+  @media (max-width: 505px) {
+    body {
+      overflow:hidden;
+    }
+    img {
+      top: 0;
+      /* left: 20px; */
+      width: 400px;
+      margin: 0  auto;
+      /* place-self: center; */
+      /* align-self: inherit; */
+      /* position: absolute; */
+    }
+
+      .coming-soon {
+        background : #000;
+      }
+      
+      .coming-soon,h1 {
+        color: #151515;
+        text-align: center;
+        font-size: 32px;
+      }
+    main {
+      align-content: center;
+      /* box-sizing: border-box; */
+      /* display: grid; */
+      font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+      -webkit-hyphens: auto;
+      overflow: hidden;
+      hyphens: auto;
+      /* line-height: 1.65; */
+      margin: 0 auto;
+      width:400px;
+      height: 100%;
+      /* padding: 72px0; */
+      text-align: center;
+    }
+  }
+
+  @media (max-width: 320px) {
+    img {
+      width:250px;
+    }
+    .coming-soon,h1 {
+      font-size: 18px;
+    }
+  }
+
+  @media (max-width: 375px) {
+    img {
+      width:300px;
+    }
+  }
