--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,7 +11,7 @@ html, body {
 }
 
 @import "./sidebar.scss";
-@import "./blog_header.scss";
-@import "./blog_page.scss";
-@import "./blog_post.scss";
+@import "./blog/header.scss";
+@import "./blog/page.scss";
+@import "./blog/post.scss";
 @import "./const.scss";
