--- a/src/styles/blog/page.scss
+++ b/src/styles/blog/page.scss
@@ -1,6 +1,7 @@
-.blogpage{
+.blog{
     width: 100vw;
     font-size: 22px;
+    min-height: 100vh;
     // padding-left: 20vw;
     .navbar {
         width: 100vw;
@@ -55,59 +56,120 @@
             cursor: pointer;
         }
     }
-}
-
-.home {
-    font-family: "Indie Flower";
-    display: flex;
-}
-
-.post-page {
-    font-family: "Indie Flower";
-    display: flex;
-    background: #dfdfdf;
-    .post-content {
-        padding: 20px;
-        flex: 9;
-        .post-content-wrapper {
-            .post-image {
-                width:100%;
-                height:400px;
-                object-fit: cover;
-                border-radius: 5px;
-            }
-            .post-title {
-                text-align: center;
-                margin: 10px;
-                font-size: 28px;
-            }
-            .post-edit {
-                float: right;
-                font-style: 16px;
-                .post-icon {
-                    margin-left: 10px;
-                    cursor: pointer;
-                    color: tomato;
-                    &:first-child {
-                        color: teal;
+    .post-page {
+        font-family: "Indie Flower";
+        display: flex;
+        background: #dfdfdf;
+        .post-content {
+            padding: 20px;
+            flex: 9;
+            .post-content-wrapper {
+                .post-image {
+                    width:100%;
+                    height:400px;
+                    object-fit: cover;
+                    border-radius: 5px;
+                }
+                .post-title {
+                    text-align: center;
+                    margin: 10px;
+                    font-size: 28px;
+                }
+                .post-edit {
+                    float: right;
+                    font-style: 16px;
+                    .post-icon {
+                        margin-left: 10px;
+                        cursor: pointer;
+                        color: tomato;
+                        &:first-child {
+                            color: teal;
+                        }
                     }
                 }
+                .post-info {
+                    margin-bottom: 20px;
+                    display: flex;
+                    justify-content: space-between;
+                    font-style: 16px;
+                    color: #fb7e14;
+                }
+                .post-description {
+                    color: #373330;
+                    line-height: 25px;
+                    font-size: 18px;
+                }
             }
-            .post-info {
-                margin-bottom: 20px;
+        }
+        .social-sidebar {
+            flex:3;
+        }
+    }
+    .home {
+        font-family: "Indie Flower";
+        display: flex;
+    }
+    .write {
+        padding-top: 50px;
+        .story-image {
+            margin-left: 150px;
+            width: 70vw;
+            height: 250px;
+            border-radius: 10px;
+            object-fit: cover;
+        }
+        .form {
+            .form-collection {
+                margin-left: 150px;
+                position: relative;
                 display: flex;
-                justify-content: space-between;
-                font-style: 16px;
-                color: #fb7e14;
-            }
-            .post-description {
-                color: #373330;
-                line-height: 25px;
-                font-size: 18px;
+                .upload-icon {
+                    width: 25px;
+                    height: 25px;
+                    margin-top: 20px;
+                    border-radius: 50%;
+                    border: 1px solid;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    color: #151515;
+                    cursor: pointer;
+                }
+                .title-text {
+                    font-size: 20px;
+                }
+                .story-text{
+                    font-size: 18px !important;
+                }
+                .title-text, .story-text {
+                    border: none;
+                    font-size: 30px;
+                    padding: 20px;
+                    width: 70vw;
+                    font-family: 'Indie Flower';
+                    color: #151515;
+                    background: #dfdfdf;
+                    &:focus {
+                        outline: none;
+                    }
+                }
+                .submit {
+                    font-family: 'fira sans';
+                    position: absolute;
+                    top: 20px;
+                    right: 50px;
+                    color: white;
+                    background-color: teal;
+                    padding: 10px;
+                    border: none;
+                    border-radius: 10px;
+                    font-size: 16px;
+                    cursor: pointer;
+                }
             }
         }
     }
-    .social-sidebar {
-        flex:3;
+    .settings {
+        
     }
 }
