--- a/src/styles/blog/page.scss
+++ b/src/styles/blog/page.scss
@@ -8,7 +8,7 @@
         .story-image {
             margin-left: 150px;
             width: 70vw;
-            height: 250px;
+            height: 400px;
             border-radius: 10px;
             object-fit: cover;
         }
@@ -181,6 +181,11 @@
         }
         .social-sidebar {
             flex: 3;
+            .section {
+                p {
+                    font-family: "Fira Sans";
+                }
+            }
         }
     }
 
