--- a/src/styles/blog/sidebar.scss
+++ b/src/styles/blog/sidebar.scss
@@ -31,6 +31,7 @@
         }
         p {
             padding: 30px;
+            font-family: "Fira Sans";
         }
         &:first-child{
             margin-left: 20px;
