fixes from other dev dell

--- a/src/styles/blog/page.scss
+++ b/src/styles/blog/page.scss
@@ -138,6 +138,7 @@
         background: #dfdfdf;
         .post-content {
             padding: 20px;
+            margin-top: 20px;
             flex: 9;
             .post-content-wrapper {
                 .post-image {
