--- a/src/styles/blog/post.scss
+++ b/src/styles/blog/post.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     margin: 20px;
+    margin-top: 40px;
     .post {
         width: 400px;
         margin: 0px 28px 40px 25px;
